# crab-watch

./: .gitignore  .prometheus.yaml  LICENSE  README.md  docker-compose.yaml  prometheus.yaml
.github/workflows/: backend-ci.yaml
backend/: Cargo.toml  Dockerfile  Makefile
backend/configuration/: development.yaml  production.yaml  test.yaml
backend/src/: app.rs  database.rs  lib.rs  main.rs  settings.rs
backend/src/routes/: crabs.rs  health.rs  mod.rs
backend/tests/: crabs.rs  health_check.rs
backend/tests/api/: crabs.rs  health_check.rs  helpers.rs  main.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
kube/: backend.yaml  db.yaml  frontend.yaml
